<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC_Museum</string>
    <string name="action_settings">Settings</string>
    <string name="start">화면을 터치하세요</string>
    
    <string name="introduction">박물관 소개</string>
    <string name="exhibition">전시 물품</string>
    <string name="personal_info">개인 정보</string>
    
    <string name="history">연혁</string>
    <string name="guide">관람 안내</string>
    <string name="map">찾아 오는 길</string>
    
    <string name="name">이름</string>
    <string name="location">소장처</string> 
    <string name="country">국적/시대</string>
    <string name="texture">재질</string>
    <string name="use">용도</string>
    <string name="design">문양</string>
    <string name="id">유물번호</string>
    
    <string name="prompt">원하는 항목을 선택하세요</string>
    <string-array name="choice">
        <item>국적/시대</item>
        <item>재질</item>
        <item>용도</item>
        <item>문양</item>        
    </string-array>
    
    <string name="search">검색</string>   
    
    <string name="list_image">리스트 이미지</string>
    

</resources>
