<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#A0234266" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/country_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <Button
            android:id="@+id/texture_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/texture" />

        <Button
            android:id="@+id/use_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/use" />

        <Button
            android:id="@+id/design_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/design" />
    </LinearLayout>

</FrameLayout>